continued work on fixing last for loop

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main>
     <div class="block_container">
-      <div class="time-block">
+      <div id="9" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
@@ -35,7 +35,7 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="10" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
@@ -46,7 +46,7 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="11" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
@@ -57,7 +57,7 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="12" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
@@ -68,11 +68,11 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="13" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
-        <p class="hour_text">13</p>
+        <p class="hour_text">1</p>
         <!-- <span class="hour_text">PM</span> -->
 
       </div>
@@ -80,11 +80,11 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="14" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
-        <p class="hour_text">14</p>
+        <p class="hour_text">2</p>
         <!-- <span class="hour_text">PM</span> -->
 
       </div>
@@ -92,11 +92,11 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="15" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
-        <p class="hour_text">15</p>
+        <p class="hour_text">3</p>
         <!-- <span class="hour_text">PM</span> -->
 
       </div>
@@ -104,11 +104,11 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="16" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
-        <p class="hour_text">16</p>
+        <p class="hour_text">4</p>
         <!-- <span class="hour_text">PM</span> -->
 
       </div>
@@ -116,11 +116,11 @@
     </div>
 
     <div class="block_container">
-      <div class="time-block">
+      <div id="17" class="time-block">
         <input class="description">
       </div>
       <div class="hour">
-        <p class="hour_text">17</p>
+        <p class="hour_text">5</p>
         <!-- <span class="hour_text">PM</span> -->
 
       </div>
